--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/arskdj/fullstackopen_part8_graphql#readme",
   "dependencies": {
     "apollo-server": "^2.17.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "mongoose": "^5.10.3",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
